// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: custom rule 1`] = `
<Modal
  contentLabel="title"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        title
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <Alert
        variant="info"
      >
        coding_rules.active_in_all_profiles
      </Alert>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-quality-profile-select-label"
        >
          coding_rules.quality_profile
        </label>
        <Select
          aria-labelledby="coding-rules-quality-profile-select-label"
          getOptionLabel={[Function]}
          id="coding-rules-quality-profile-select"
          isClearable={false}
          isDisabled={false}
          onChange={[Function]}
          options={[]}
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-severity-select"
        >
          severity
        </label>
        <SeveritySelect
          ariaLabelledby="coding-rules-severity-select"
          isDisabled={false}
          onChange={[Function]}
          severity="MAJOR"
        />
      </div>
      <div
        className="modal-field"
      >
        <p
          className="note"
        >
          coding_rules.custom_rule.activation_notice
        </p>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        coding_rules.activate
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="title"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        title
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <Alert
        variant="info"
      >
        coding_rules.active_in_all_profiles
      </Alert>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-quality-profile-select-label"
        >
          coding_rules.quality_profile
        </label>
        <Select
          aria-labelledby="coding-rules-quality-profile-select-label"
          getOptionLabel={[Function]}
          id="coding-rules-quality-profile-select"
          isClearable={false}
          isDisabled={false}
          onChange={[Function]}
          options={[]}
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-severity-select"
        >
          severity
        </label>
        <SeveritySelect
          ariaLabelledby="coding-rules-severity-select"
          isDisabled={false}
          onChange={[Function]}
          severity="MAJOR"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          title="1"
        >
          1
        </label>
        <input
          disabled={false}
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value="1"
        />
        <SafeHTMLInjection
          htmlAsString="description"
          sanitizeLevel={1}
        >
          <div
            className="note"
          />
        </SafeHTMLInjection>
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          title="2"
        >
          2
        </label>
        <textarea
          disabled={false}
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value="1"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        coding_rules.activate
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: submitting 1`] = `
<Modal
  contentLabel="title"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        title
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <Alert
        variant="info"
      >
        coding_rules.active_in_all_profiles
      </Alert>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-quality-profile-select-label"
        >
          coding_rules.quality_profile
        </label>
        <Select
          aria-labelledby="coding-rules-quality-profile-select-label"
          getOptionLabel={[Function]}
          id="coding-rules-quality-profile-select"
          isClearable={false}
          isDisabled={true}
          onChange={[Function]}
          options={[]}
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-severity-select"
        >
          severity
        </label>
        <SeveritySelect
          ariaLabelledby="coding-rules-severity-select"
          isDisabled={true}
          onChange={[Function]}
          severity="MAJOR"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          title="1"
        >
          1
        </label>
        <input
          disabled={true}
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value="1"
        />
        <SafeHTMLInjection
          htmlAsString="description"
          sanitizeLevel={1}
        >
          <div
            className="note"
          />
        </SafeHTMLInjection>
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          title="2"
        >
          2
        </label>
        <textarea
          disabled={true}
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value="1"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        coding_rules.activate
      </SubmitButton>
      <ResetButtonLink
        disabled={true}
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: update mode 1`] = `
<Modal
  contentLabel="title"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        title
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-quality-profile-select-label"
        >
          coding_rules.quality_profile
        </label>
        <Select
          aria-labelledby="coding-rules-quality-profile-select-label"
          getOptionLabel={[Function]}
          id="coding-rules-quality-profile-select"
          isClearable={false}
          isDisabled={false}
          onChange={[Function]}
          options={[]}
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-severity-select"
        >
          severity
        </label>
        <SeveritySelect
          ariaLabelledby="coding-rules-severity-select"
          isDisabled={false}
          onChange={[Function]}
          severity="MAJOR"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          title="1"
        >
          1
        </label>
        <input
          disabled={false}
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value="1"
        />
        <SafeHTMLInjection
          htmlAsString="description"
          sanitizeLevel={1}
        >
          <div
            className="note"
          />
        </SafeHTMLInjection>
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          title="2"
        >
          2
        </label>
        <textarea
          disabled={false}
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value="1"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        save
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: with deep profiles 1`] = `
<Modal
  contentLabel="title"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        title
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-quality-profile-select-label"
        >
          coding_rules.quality_profile
        </label>
        <Select
          aria-labelledby="coding-rules-quality-profile-select-label"
          getOptionLabel={[Function]}
          id="coding-rules-quality-profile-select"
          isClearable={false}
          isDisabled={true}
          onChange={[Function]}
          options={
            [
              {
                "actions": {
                  "edit": true,
                },
                "activeDeprecatedRuleCount": 2,
                "activeRuleCount": 10,
                "childrenCount": 0,
                "depth": 0,
                "isBuiltIn": false,
                "isDefault": false,
                "isInherited": false,
                "key": "key",
                "language": "js",
                "languageName": "JavaScript",
                "name": "name",
                "projectCount": 3,
              },
            ]
          }
          value={
            {
              "actions": {
                "edit": true,
              },
              "activeDeprecatedRuleCount": 2,
              "activeRuleCount": 10,
              "childrenCount": 0,
              "depth": 0,
              "isBuiltIn": false,
              "isDefault": false,
              "isInherited": false,
              "key": "key",
              "language": "js",
              "languageName": "JavaScript",
              "name": "name",
              "projectCount": 3,
            }
          }
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          id="coding-rules-severity-select"
        >
          severity
        </label>
        <SeveritySelect
          ariaLabelledby="coding-rules-severity-select"
          isDisabled={false}
          onChange={[Function]}
          severity="MAJOR"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          title="1"
        >
          1
        </label>
        <input
          disabled={false}
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value="1"
        />
        <SafeHTMLInjection
          htmlAsString="description"
          sanitizeLevel={1}
        >
          <div
            className="note"
          />
        </SafeHTMLInjection>
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          title="2"
        >
          2
        </label>
        <textarea
          disabled={false}
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value="1"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        coding_rules.activate
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
